--- a/src/styling/Mapside.scss
+++ b/src/styling/Mapside.scss
@@ -1,3 +1,5 @@
+@import "../styling/mixins.scss";
+
 .MapsideWrapper {
   background-color: rgb(241, 250, 238, 0.9);
   color: #4c2e05;
@@ -10,12 +12,22 @@
   min-height: 100vh;
   backdrop-filter: blur(5px);
   transition: 0.35s all ease-in;
+  @include for-phone-only {
+    width: 84%;
+    max-height: 100vh;
+    @include for-small-phone {
+      max-height: 130vh;
+    }
+  }
 
   .MapsideHeader {
     display: flex;
     border-bottom: 1px solid black;
     height: 3rem;
     transition: all 0.6s ease-in;
+    i {
+      color: orange;
+    }
     .headerelement {
       display: flex;
       justify-content: center;
@@ -30,11 +42,45 @@
     width: 95%;
     margin: 0 auto;
 
-    .commoncrime {
+    .exclamation {
+      font-weight: 700;
+      i {
+        color: orange;
+      }
+    }
+
+    .overflowSmall {
+      @include for-small-phone {
+        display: none;
+      }
+    }
+
+    .overflowBig {
+      @include for-phone-only {
+        display: none;
+      }
+      @include for-small-phone {
+        display: none;
+      }
+    }
+
+    a {
+      font-weight: 900;
+      color: #f95738;
+    }
+
+    .numberedlist {
       h4 {
         color: #1d3557;
         font-weight: 300;
       }
+    }
+
+    .moreinfo {
+      margin-top: 0rem;
+      color: #f95738;
+      border-style: none;
+      cursor: pointer;
     }
     .LastReported {
       margin-bottom: 0.1rem;
@@ -97,6 +143,7 @@
   backdrop-filter: blur(0px);
   transition: all 0.35s ease-in;
   border-left: none;
+
   .MapsideHeader {
     opacity: 0;
     transition: all 0.4s ease-in;
